--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>MBTI 유형 비교 시스템</title>
+       <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.3/gh-fork-ribbon.min.css" />
 </head>
 <style>
     body {
@@ -48,6 +50,8 @@
 </style>
 
 <body>
+        <a class="github-fork-ribbon right-top" href="https://github.com/bluetsys/MBTI"
+        data-ribbon="Fork me on GitHub" title="Fork me on GitHub" target="_blank">Fork me on GitHub</a>
     <table>
         <thead>
             <tr>
@@ -321,5 +325,6 @@
         }
     </script>
 </body>
+
 
 </html>
