--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 <body>
         <a class="github-fork-ribbon right-top" href="https://github.com/bluetsys/MBTI"
-        data-ribbon="Fork me on GitHub" title="Fork me on GitHub" target="_blank">Fork me on GitHub</a>
+        data-ribbon="Fork me on GitHub" title="Fork me on GitHub" target="_blank" style="background-color: #090;">Fork me on GitHub</a>
     <table>
         <thead>
             <tr>
@@ -328,3 +328,4 @@
 
 
 </html>
+
