--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.3/gh-fork-ribbon.min.css" />
 </head>
 <style>
+.github-fork-ribbon.right-top:before {
+    background-color: #090;
+}
+    
     body {
         font-family: Arial, sans-serif;
         line-height: 1;
@@ -51,7 +55,7 @@
 
 <body>
         <a class="github-fork-ribbon right-top" href="https://github.com/bluetsys/MBTI"
-        data-ribbon="Fork me on GitHub" title="Fork me on GitHub" target="_blank" style="background-color: #090;">Fork me on GitHub</a>
+        data-ribbon="Fork me on GitHub" title="Fork me on GitHub" target="_blank">Fork me on GitHub</a>
     <table>
         <thead>
             <tr>
@@ -328,4 +332,5 @@
 
 
 </html>
+
 
